--- a/MortgageCalculator.MortgageData/MortgageCalculator.MortgageData.csproj
+++ b/MortgageCalculator.MortgageData/MortgageCalculator.MortgageData.csproj
@@ -52,6 +52,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\202505260830170_InitialCreate.cs" />
+    <Compile Include="Migrations\202505260830170_InitialCreate.Designer.cs">
+      <DependentUpon>202505260830170_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202505261044317_InitialCreate1.cs" />
+    <Compile Include="Migrations\202505261044317_InitialCreate1.Designer.cs">
+      <DependentUpon>202505261044317_InitialCreate1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MortgageDataContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\MortgageRepo.cs" />
@@ -65,6 +74,14 @@
       <Project>{b0628d9a-6370-4fdf-b285-d8092a057622}</Project>
       <Name>MortgageCalculator.Dto</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202505260830170_InitialCreate.resx">
+      <DependentUpon>202505260830170_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202505261044317_InitialCreate1.resx">
+      <DependentUpon>202505261044317_InitialCreate1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
